- Added support for the license key constant